--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>coffeerun</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+    <!-- Styling for text boxes-->
+    <style>
+        form :focus:required:invalid {
+            border-color: #a94442;
+        }
+    </style>
 </head>
 
 <body class="container">
@@ -18,17 +23,14 @@
                 <form data-coffee-order="form">
                     <div class="form-group">
                         <label for="coffeeOrder">Coffee Order</label>
-                        <input class="form-control" name="coffee" id="coffeeOrder" autofocus>
+                        <input class="form-control" type="text" name="coffee" id="coffeeOrder" autofocus required pattern="[a-zA-Z\s]+" />
                     </div>
                     <div class="form-group">
                         <label for="emailInput">Email</label>
-                        <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com">
+                        <input class="form-control" type="email" name="emailAddress" id="emailInput" value="" placeholder="dr@who.com" required/>
                     </div>
                     <div class="radio">
-                        <label>
-                          <input type="radio" name="size" value="short">
-                          Short
-                        </label>
+                        <label><input type="radio" name="size" value="short">Short</label>
                     </div>
                     <div class="radio">
                         <label>
@@ -42,69 +44,43 @@
                         Grande
                         </label>
                     </div>
-                    <div class="radio">
-                        <label>
-                        <input type="radio" name="size" value="Coffee-zilla">
-                        Coffee-zilla
-                        </label>
-                    </div>
+
                     <div class="form-group">
                         <label for="flavorShot">Flavor Shot</label>
                         <select id="flavorShot" class="form-control" name="flavor">
-                          <option value="">None</option>
-                          <option value="caramel">Caramel</option>
-                          <option value="almond">Almond</option>
-                          <option value="mocha">Mocha</option>
+                        <option value="">None</option>
+                        <option value="caramel">Caramel</option>
+                        <option value="almond">Almond</option>
+                        <option value="mocha">Mocha</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="strengthLevel" class = "css-color" id="strengthLabel">Caffeine Rating</label>
-                        <input name="strength" class = "css-color" id="strengthLevel" type="range" value="30">
-                        <output for="strengthLevel" class = "css-color" id="strengthValue">30</output>
-                        <!--<span id="range-slider-value">30</span>-->
+                        <label for="strengthLevel">Caffeine Rating: </label>
+                        <input name="strength" id="strengthLevel" type="range" min="0" max="100" value="30" />
 
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
                     <button type="reset" class="btn btn-default">Reset</button>
-
                 </form>
+
             </div>
         </div>
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-              </div>
-              <div class="modal-body">
-                <p>To see your acheivement click Save Changes</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div><!-- /.modal-content -->
-          </div><!-- /.modal-dialog -->
-        </div><!-- /.modal -->
-
-        <div class ="form-group" hidden>
-            <label for="addedFlavor">Extra Flavor</label>
-            <select id="addedFlavor" class="form-control" name="flavor">
-              <option value="">None</option>
-              <option value="caramel">Caramel+</option>
-              <option value="almond">Almond+</option>
-              <option value="mocha">Mocha+</option>
-            </select>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4> Pending Orders: </h4>
+                <div data-coffee-order="checklist">
+                </div>
+            </div>
         </div>
-
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
+    <script src="scripts/validation.js" charset="utf-8"></script>
+    <script src="scripts/checklist.js" charset="utf-8"></script>
     <script src="scripts/formhandler.js" charset="utf-8"></script>
     <script src="scripts/datastore.js" charset="utf-8"></script>
     <script src="scripts/truck.js" charset="utf-8"></script>
     <script src="scripts/main.js" charset="utf-8"></script>
+
 </body>
 
 </html>
